--- a/index.html
+++ b/index.html
@@ -279,19 +279,19 @@
                 </h4>
                 <div class="logos-lojas">
                     <div class="logo-lojas">
-                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY" class="action-button"
+                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY" onclick="fbq('track', 'Lead');" class="action-button"
                             data-element="whatsapp-logos-marcas-ml" data-page="landing-promocenter">
                             <img src="./mercadolivre-landing.webp" alt="Mercado Livre">
                         </a>
                     </div>
                     <div class="logo-lojas">
-                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY" class="action-button"
+                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY" onclick="fbq('track', 'Lead');" class="action-button"
                             data-element="whatsapp-logos-marcas-shopee" data-page="landing-promocenter">
                             <img src="./shopee-landing.webp" alt="Shopee">
                         </a>
                     </div>
                     <div class="logo-lojas">
-                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY" class="action-button"
+                        <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY" onclick="fbq('track', 'Lead');" class="action-button"
                             data-element="whatsapp-logos-marcas-amazon" data-page="landing-promocenter">
                             <img src="./amazon.webp" alt="Amazon">
                         </a>
@@ -303,7 +303,7 @@
             </div>
 
             <div class="buttons">
-                <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY" class="btn-whats action-button"
+                <a href="https://chat.whatsapp.com/GUjaqIUEruR4RHeVv8ZSjY" onclick="fbq('track', 'Lead');" class="btn-whats action-button"
                     data-element="whatsapp-top" data-page="landing-promocenter">
                     ENTRAR NO <strong>GRUPO DO WHATSAPP</strong>
                 </a>
